[workspace]
members = ["crates/*", "cli"]
exclude = ["crates/speedtests", "crates/io"]
resolver = "2"


[profile.release]
debug = 1

[workspace.dependencies]
nq-core = { path = "./crates/nq-core" }
nq-stats = { path = "./crates/nq-stats" }
nq-proxy-network = { path = "./crates/nq-proxy-network" }
nq-rpm = { path = "./crates/nq-rpm" }
nq-rtt = { path = "./crates/nq-rtt" }
nq-tokio-network = { path = "./crates/nq-tokio-network" }

anyhow = "1.0"
async-trait = { version = "0.1" }
boring = { git = "https://github.com/cloudflare/boring", rev = "abfe2f798094d8b5855592aec8b5b90e3c2197e2" }
clap = "4.3"
http = "1.0"
http-body-util = "0.1.0-rc.3"
hyper = "1.0"
hyper-util = "0.1"
pin-project-lite = "0.2"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
shellflip = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1.0"
tokio-util = "0.7"
tokio-boring = { git = "https://github.com/cloudflare/boring", rev = "abfe2f798094d8b5855592aec8b5b90e3c2197e2" }
ureq = "2.8"
url = "2.4"
