[workspace]
members = ["crates/*", "cli"]
resolver = "2"

[workspace.package]
version = "3.3.0"
repository = "https://github.com/cloudflare/foundations"
edition = "2021"
authors = [
    "Fisher Darling <fisher@cloudflare.com>",
    "Lina Baquero <lina@cloudflare.com>",
    "Cloudflare"
]
license = "BSD-3-Clause"

[profile.release]
debug = 1

[workspace.dependencies]
nq-core = { path = "./crates/nq-core" }
nq-stats = { path = "./crates/nq-stats" }
nq-packetloss = { path = "./crates/nq-packetloss" }
nq-proxy-network = { path = "./crates/nq-proxy-network" }
nq-rpm = { path = "./crates/nq-rpm" }
nq-latency = { path = "./crates/nq-latency" }
nq-load-generator = { path = "./crates/nq-load-generator" }
nq-tokio-network = { path = "./crates/nq-tokio-network" }

anyhow = "1.0"
async-trait = { version = "0.1" }
boring = "4.11.0"
clap = "4.3"
clap-verbosity-flag = "2.1"
http = "1.0"
http-body-util = "0.1.2"
hyper = "1.0"
hyper-util = "0.1"
pin-project-lite = "0.2"
rand = "0.8"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1.38"
tokio-util = "0.7"
tokio-boring = "4.11.0"
url = "2.4"
webrtc = "0.12.0"
