[package]
name = "mach-cli"
version = "0.1.0"
authors = ["Fisher Darling <fisher@cloudflare.com>"]
edition = "2021"

[[bin]]
name = "mach"
path = "./src/main.rs"

[dependencies]
nq-core = { workspace = true }
nq-rpm = { workspace = true }
nq-rtt = { workspace = true }
nq-tokio-network = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellflip = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "net", "macros",] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
ureq = { workspace = true, features = ["json"] }