[package]
name = "mach-cli"
version = "0.1.0"
authors = ["Fisher Darling <fisher@cloudflare.com>"]
edition = "2021"

[[bin]]
name = "mach"
path = "./src/main.rs"

[dependencies]
nq-core = { workspace = true }
nq-latency = { workspace = true }
nq-load-generator = { workspace = true }
nq-packetloss = { workspace = true }
nq-rpm = { workspace = true }
nq-tokio-network = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "net", "macros",] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
