[package]
name = "nq-io"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
boring = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client", "http1", "http2"] }
nix = { workspace = true }
pin-project-lite = { workspace = true }
quiche = { workspace = true, features = ["boringssl-boring-crate"] }
slotmap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "net"] }
tokio-boring = { workspace = true }
tracing = { workspace = true }