[package]
name = "nq-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
boring = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client", "http1", "http2"] }
hyper-util = { workspace = true, features = ["tokio"] }
pin-project-lite = { workspace = true }
shellflip = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "net"] }
tokio-boring = { workspace = true }
tracing = { workspace = true }
rand = "0.9.0-alpha.1"
bytes = "1.6.0"