[package]
name = "nq-core"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "../README.md"

[dependencies]
anyhow = { workspace = true }
boring = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client", "http1", "http2"] }
hyper-util = { workspace = true, features = ["tokio"] }
pin-project-lite = { workspace = true }
rand = { workspace = true }
rustls-native-certs = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "net", "test-util"] }
tokio-boring = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }