[package]
name = "nq-latency"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "../README.md"

[dependencies]
nq-core = { workspace = true }
nq-stats = { workspace = true }

anyhow = { workspace = true, features = ["backtrace"] }
http = { workspace = true }
http-body-util = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
