[package]
name = "nq-proxy-network"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
nq-core = { workspace = true }
shellflip = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tracing = { workspace = true }