[package]
name = "nq-rpm"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nq-core = { workspace = true }
nq-stats = { workspace = true }

anyhow = { workspace = true, features = ["backtrace"] }
humansize = "*"
http = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shellflip = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }