[package]
name = "nq-tokio-network"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "../README.md"

[dependencies]
anyhow = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
nq-core = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tokio-util = { workspace = true }
tracing = { workspace = true }