[package]
name = "nq-speedtests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nq-io = { workspace = true }
nq-stats = { workspace = true }

anyhow = { workspace = true, features = ["backtrace"] }
humansize = "*"
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }